--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,25 @@
+html{
+    background-color: rgb(240, 206, 161);
+}
+
+#sub{
+    font-family: fantasy;
+    color: brown;
+    font-size: 40px;
+    text-align: center;
+    text-shadow: 4px 4px 6px white;
+}
+
+header{
+    background-color: rgb(225, 110, 69);
+   font-family: fantasy;
+   font-size: 50px;
+   text-align: center;
+   text-shadow: 4px 4px 6px white;
+
+}
+
+
 #contenedor{
     display: flex;
     gap: 120px;
