--- a/estilos/brasil.css
+++ b/estilos/brasil.css
@@ -1,3 +1,9 @@
 h1{
     font-size: 20px;
 }
+
+body{
+
+    background-image: url(../imagenes/comidas\ Brasileras/rio.jpg);
+    background-size: cover;
+}
