--- a/estilos/style.css
+++ b/estilos/style.css
@@ -70,11 +70,27 @@ header p.regis{
     
 }
 
-
-
-
 #contenedor{
     display: flex;
     gap: 120px;
     justify-content: center;
 }
+
+#top{
+
+    font-family: fantasy;
+    font-size: 57px;
+    text-shadow: 4px 4px 6px black;
+    color: white;
+    bottom: 0;
+}
+
+#top img {
+
+    height: 140px;
+    margin: 70px;
+    border: 40px;
+    
+}
+
+
