--- a/estilos/brasil.css
+++ b/estilos/brasil.css
@@ -2,7 +2,7 @@
 
 body{
 
-    background-image: url(../imagenes/comidas\ Brasileras/brasilComida.jpg);
+    background-image: url(imagenes/comidas\ Brasileras/brasilComida.jpg);
     background-size: cover;
 }
 .atras{
