--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,21 +76,40 @@ header p.regis{
     justify-content: center;
 }
 
+
+
+
 #top{
 
     font-family: fantasy;
-    font-size: 57px;
+    font-size: 50px;
     text-shadow: 4px 4px 6px black;
-    color: white;
-    bottom: 0;
+    color: blueviolet;
+    bottom: 0;  
+}
+
+#top p{
+    text-align: center;
 }
 
 #top img {
-
     height: 140px;
-    margin: 70px;
-    border: 40px;
-    
+    margin: 30px;  
+    border: 5px solid white;
 }
+
+#top table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%; 
+    border-collapse: collapse;    
+}
+
+#top th, #top td {
+    text-align: center;       
+    vertical-align: middle;   
+    padding: 10px;            
+}
+
 
 
