--- a/estilos/argen.css
+++ b/estilos/argen.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../imagenes/comidas\ Argentinas/fondoArg.png);
+    background-image: url(../imagenes/comidas\ Argentinas/fondito.png);
     background-size: cover;
    
 }
@@ -8,7 +8,7 @@ h1{
     font-family: fantasy;
     font-size: 140px;
     text-align: center;
-    color: skyblue;
+    color: #08d3e9;
     text-shadow: 4px 4px 6px white ;
     background-color: rgba(226, 224, 224, 0.711);
 
@@ -18,6 +18,6 @@ h1{
 #Asado p{
  font-family: fantasy;
  font-size: 20px;
- color: white;
- text-shadow: 4px 4px 6px black ;
+ color: black;
+ text-shadow: 4px 4px 6px white;
 }
