--- a/estilos/brasil.css
+++ b/estilos/brasil.css
@@ -5,6 +5,18 @@ body{
     background-image: url(../imagenes/comidas\ Brasileras/brasilComida.jpg);
     background-size: cover;
 }
+#bra{
+    font-family: fantasy;
+    font-size: 140px;
+    text-align: center;
+    color: #1c8856;
+    text-shadow: 4px 4px 6px white ;
+    background-color: rgba(226, 224, 224, 0.711);
+}
+.titu{
+
+    font-size: 3em;
+}
 .atras{
     left: 38%;
     top: calc(50% - 70px);
@@ -18,20 +30,11 @@ body{
     transform: scale(1.2,1.2);
 }
 .botones{
-    font-size: 30px;
     width: 70px;
     height: 70px;
-    line-height: 70px;
     border-radius: 50px;
     background-color: rgba(o,o,o,.7);
-    text-align: center;
-    font-weight: bold;
     position: absolute;
-    color: #f3f0f0;
-    box-shadow: 0 0 0 10px rgba(255,255,255,6);
-    -webkit-transition: all .3s ease;
-    -o-transition: all .3s ease;
-    transition:all .3s ease;
 }
 .contenedor{
     padding-left: 30%;
@@ -48,4 +51,30 @@ body{
     height: 100%;
     display: flex;
     align-items: center;
+}
+.ingre {
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(5, 133, 90, 0.9);
+    max-width: max-content;
+    text-shadow: 4px 4px 6px white ;
+    background-color: rgba(226, 224, 224, 0.711);
+}
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+    color: #333333;
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+li {
+    font-weight: bold;
+    background-color: rgba(0,0,0,rgba(o,o,o,.7));
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 5px;
 }
