--- a/estilos/argen.css
+++ b/estilos/argen.css
@@ -1,6 +1,8 @@
 body{
     background-image: url(../imagenes/comidas\ Argentinas/fondito.png);
-    background-size: cover;  
+    background-size: cover; 
+    background-attachment: fixed;
+     
 }
 
 h1{
@@ -14,20 +16,32 @@ h1{
     padding: 2px;
 }
 
+h2{
+    font-size: 60px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black;
+    text-shadow: 2px 2px 6px white;
+}
 
-#Asado p{
+.textos p{
  font-family: fantasy;
  font-size: 20px;
  color: black;
  text-shadow: 2px 2px 6px white;
  background-color: rgba(226, 224, 224, 0.711);
 }
-
-.contenedor {
-    display: flex;
+.contenedor{
+    padding-left: 30%; 
+    width: 40%;
+    margin-top: 70px;
+    margin-bottom: -300px;
     position: relative;
+    display: flex;
     justify-content: center;
+    height: 780px;
 }
+
+
 
  #imagen{
     width: 700px;
@@ -36,12 +50,12 @@ h1{
 
 
 .atras{
-    left: 530px;
-   top: 30%;
+   top: 170px;
+   left: 550px;
 }
 .adelante{
-    right: -2%;
-    top: 30%;
+    top: 170px;
+    right: -5px;
 }
 
 .botones:hover{
@@ -67,10 +81,11 @@ h1{
 
 }
 
-.contenedor{
-    padding-left: 30%;
+.contenedor1{
+    padding-left: 30%; 
     width: 40%;
     margin-top: 70px;
+    margin-bottom: -300px;
     position: relative;
     display: flex;
     justify-content: center;
