--- a/estilos/brasil.css
+++ b/estilos/brasil.css
@@ -78,3 +78,19 @@ li {
     padding: 10px;
     border-radius: 5px;
 }
+.brigadeiroBrasil{
+    padding-left: 30%;
+    width: 40%;
+    margin-top: 70px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 780px;
+}
+
+.brigadeiroBrasil img{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
