--- a/estilos/brasil.css
+++ b/estilos/brasil.css
@@ -4,6 +4,8 @@ body{
 
     background-image: url(../imagenes/comidas\ Brasileras/brasilComida.jpg);
     background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 #bra{
     font-family: fantasy;
