--- a/estilos/argen.css
+++ b/estilos/argen.css
@@ -31,6 +31,19 @@ h2{
  text-shadow: 2px 2px 6px white;
  background-color: rgba(226, 224, 224, 0.711);
 }
+ul {
+    list-style-type: none;
+    padding: 0;
+} 
+
+li {
+    font-weight: bold;
+    background-color: rgba(0,0,0,rgba(o,o,o,.7));
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 5px;
+}
+
 .contenedor{
     padding-left: 30%; 
     width: 40%;
@@ -81,6 +94,21 @@ h2{
    -o-transition: all .3s ease;
    transition:all .3s ease;
 
+}
+.ingres{
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #08d3e9;
+    max-width: max-content;
+    text-shadow: 4px 4px 6px white ;
+    background-color: rgba(226, 224, 224, 0.711);
+}
+h3{
+    font-size: 2em;
+    font-weight: bold;
+    color: #333333;
 }
 
 .contenedor1{
