--- a/estilos/brasil.css
+++ b/estilos/brasil.css
@@ -64,10 +64,12 @@ body{
     text-shadow: 4px 4px 6px white ;
     background-color: rgba(226, 224, 224, 0.711);
 }
-h1 {
-    font-size: 2em;
+h3 {
+    font-size: 3em;
     font-weight: bold;
-    color: #333333;
+    color: #283d17;
+    text-shadow: 4px 4px 6px white ;
+    
 }
 ul {
     list-style-type: none;
@@ -95,4 +97,85 @@ li {
     height: 100%;
     display: flex;
     align-items: center;
+}
+
+.comida3{
+    padding-left: 30%;
+    width: 40%;
+    margin-top: 70px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 780px;
+}
+
+.comida3 img{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.comida4{
+    padding-left: 30%;
+    width: 40%;
+    margin-top: 70px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 780px;
+}
+
+.comida4 img{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+p{
+    font-size: 2em;
+    font-family: VeraSe, Georgia, serif;   
+    text-shadow: 4px 4px 6px rgb(46, 46, 46) ;
+    background-color: rgba(255, 255, 255, 0.267);
+    width: auto;
+}
+.titu{
+
+    font-family: fantasy;
+}
+
+.tam{
+    font-family: fantasy;
+    font-size: 20px;
+    text-align: center;
+    color: #10422b;
+    text-shadow: 4px 4px 6px white ;
+    background-color: rgba(226, 224, 224, 0.711);
+    
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+table {
+    width: auto;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+th{
+
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    text-align: center;
+    color: #1c8856;
+    text-shadow: 4px 4px 6px rgb(60, 146, 96) ;
+    background-color: rgba(226, 224, 224, 0.711);
+
+}
+nav {
+    display: block; 
+    padding: 0px;
+    margin-right: auto;
+    border-radius: 0px;
 }
