--- a/estilos/formu.css
+++ b/estilos/formu.css
@@ -1,8 +1,56 @@
+body {
+    background-image: url(../imagenes/iconos/fondo.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .error {
     color: red;
     font-weight: bold;
+    text-shadow: 4px 4px 6px black;
 }
 
-.resultado{
+.resultado {
     color: black;
+    font-weight: bold;
+}
+
+.contenedor {
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: 4px 4px 6px black;
+    color: white;
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+form input {
+    padding: 8px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
 }
